@@ -36,6 +36,6 @@ typedef RETSIGTYPE (*eterm_sighandler_t)(int);
 
 extern int wait_for_chld(int);
 extern int system_wait(char *);
-extern int system_no_wait(char *);
+extern pid_t system_no_wait(char *);
 
 #endif /* _SYSTEM_H_ */
